# api/controllers/flight.js
@@ -1,0 +1,18 @@
+// 'use strict';
+// var util = require('util');
+// var knex = require(../../knex.js)
+//
+//
+// function GetAllFlight(){
+//   knext('flights').
+// }
+//
+// function GetFlight(){
+//
+// }
+//
+//
+// module.exports = {
+//   GetAllFlight: GetAllFlight
+//   GetFlight: GetFlight
+// };
