# api/controllers/hotel.js
@@ -1,0 +1,18 @@
+// 'use strict';
+// var util = require('util');
+// var knex = require(../../knex.js)
+//
+//
+// function GetAllHotel(){
+//
+// }
+//
+// function GetSpecificHotel(){
+//
+// }
+//
+//
+// module.exports = {
+//   GetAllHotel: GetAllHotel
+//   GetSpecificRestaurant: GetSpecificRestaurant
+// };
