# api/controllers/packages.js
@@ -1,0 +1,29 @@
+// 'use strict';
+// var util = require('util');
+// var knex = require(../../knex.js)
+//
+//
+// function GetAllPackagePerUser(){
+//
+// }
+//
+// function PostUniquePackagePerUser(){
+//
+// }
+//
+// function GetUniquePackageUniqueUser(){
+//
+// }
+// function AddUniquePackageUniqueUser(){
+//
+// }
+// function DeleteUniquePackageUniqueUser(){
+//
+// }
+// module.exports = {
+//   GetAllPackagePerUser: GetAllPackagePerUser
+//   PostUniquePackagePerUser: PostUniquePackagePerUser
+//   GetUniquePackageUniqueUser: GetUniquePackageUniqueUser
+//   AddUniquePackageUniqueUser: AddUniquePackageUniqueUser
+//   DeleteUniquePackageUniqueUser: DeleteUniquePackageUniqueUser
+// }
