# api/controllers/restaurant.js
@@ -1,0 +1,18 @@
+// 'use strict';
+// var util = require('util');
+// var knex = require(../../knex.js)
+//
+//
+// function GetAllRestaurant(){
+//
+// }
+//
+// function GetSpecificRestaurant(){
+//
+// }
+//
+//
+// module.exports = {
+//   GetAllRestaurant: GetAllRestaurant
+//   GetSpecificRestaurant: GetSpecificRestaurant
+// };
