# api/controllers/users.js
@@ -1,0 +1,36 @@
+// 'use strict';
+// var util = require('util');
+// var knex = require(../../knex.js)
+//
+//
+// function GetAllUsers(){
+//
+// }
+//
+// function AddUser(){
+//
+// }
+//
+// function GetSpecificUser(){
+//
+// }
+//
+// function UpdateUser(){
+//
+// }
+//
+// function DeleteUser(){
+//
+// }
+//
+//
+//
+// }
+// module.exports = {
+//   GetAllUsers: GetAllUsers
+//   AddUser: AddUser
+//   GetSpecificUser: GetSpecificUser
+//   UpdateUser: UpdateUser
+//   DeleteUser: DeleteUser
+//
+// };
