# api/swagger/swagger.yaml
@@ -25,7 +25,7 @@ paths:
       #define the type of response for Success "200" and Error
       produces:
         - application/json
-
+      operationId: GetAllFlight
       responses:
         "200":
           description: Success
@@ -37,11 +37,12 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-            
+
   /flight/{id}:
     x-swagger-router-controller: flight
     get:
       description: get the relevant flight info
+      operationId: GetFlight
       produces:
         - application/json
       parameters:
@@ -60,11 +61,12 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-            
+
   /restaurant:
     x-swagger-router-controller: restaurant
     get:
       description: get the restaurant info
+      operationId: GetAllRestaurant
       produces:
         - application/json
       responses:
@@ -83,6 +85,7 @@ paths:
     x-swagger-router-controller: restaurant
     get:
       description: get the relevant flight info
+      operationId: GetSpecificRestaurant
       produces:
         - application/json
       parameters:
@@ -101,10 +104,11 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-      
+
   /hotel:
     x-swagger-router-controller: hotel
     get:
+      operationId: GetAllHotel
       description: get an array of hotel info
       responses:
         "200":
@@ -120,6 +124,7 @@ paths:
   /hotel/{id}:
     x-swagger-router-controller: hotel
     get:
+      operationId: GetSpecificHotel
       description: get the relevant hotel info
       produces:
         - application/json
@@ -143,6 +148,7 @@ paths:
     x-swagger-router-controller: users
     get:
       description: get users info
+      operationId: GetAllUsers
       responses:
         "200":
           description: Success
@@ -154,6 +160,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
     post:
       description: add user info
+      operationId: AddUser
       produces:
         - application/json
       parameters:
@@ -172,12 +179,13 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    
-   
+
+
   /users/{id}:
     x-swagger-router-controller: users
     get:
       description: return specific users
+      operationId: GetSpecificUser
       produces:
         - application/json
       parameters:
@@ -200,6 +208,7 @@ paths:
     put:
       # define the parameters
       description: updating an new user
+      operationId: UpdateUser
       produces:
         - application/json
       parameters:
@@ -223,8 +232,9 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    delete: 
-      description: deleting a specific folder 
+    delete:
+      description: deleting a specific folder
+      operationId: DeleteUser
       produces:
         - application/json
       parameters:
@@ -243,11 +253,13 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-      
+
   /users/{id}/packages:
     x-swagger-router-controller: packages
-    get: 
+
+    get:
       description: getting all the packages from the user
+      operationId: GetAllPackagePerUser
       produces:
         - application/json
       parameters:
@@ -265,22 +277,23 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    
+
     post:
       description: adding new a package for the user
+      operationId: PostUniquePackagePerUser
       produces:
         - application/json
       parameters:
         - name: id
           type: integer
           in: path
-          required: true 
+          required: true
           description: adding an package info into the user_package table
         - name: body
           in: body
           description: adding an package to that user
-          required: true 
-          schema: 
+          required: true
+          schema:
             $ref: "#/definitions/AddNewPackage"
       responses:
         "200":
@@ -291,12 +304,13 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-            
-  /users/{user_id}/packages/{package_id}:   
+
+  /users/{user_id}/packages/{package_id}:
     x-swagger-router-controller: packages
     get:
       # define the parameters
       description: getting a specific user package
+      operationId: GetUniquePackageUniqueUser
       produces:
         - application/json
       parameters:
@@ -312,7 +326,7 @@ paths:
           format: int64
           in: path
           required: true
-          
+
       responses:
         "200":
           description: Success
@@ -322,10 +336,11 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-            
+
     put:
       # define the parameters
       description: updating a new package
+      operationId: UpdateUniquePackageUniqueUser
       produces:
         - application/json
       parameters:
@@ -361,6 +376,7 @@ paths:
       description: deleting a package
       produces:
         - application/json
+      operationId: DeleteUniquePackageUniqueUser
       parameters:
         - name: user_id
           description: loooking for specific user
@@ -384,7 +400,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-        
+
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -414,7 +430,7 @@ definitions:
         type: string
       departure_date:
         type: string
-      
+
   GetAllPackages:
     properties:
       # The array of packages
@@ -423,11 +439,11 @@ definitions:
         items:
           type: object
           properties:
-            id: 
+            id:
               type: integer
             budget:
               type: string
-            flight_id: 
+            flight_id:
               type: string
             restaurant_id:
               type: string
@@ -435,7 +451,7 @@ definitions:
               type: string
             user_id:
               type: string
-              
+
   AddNewPackage:
     required:
       - id
@@ -445,7 +461,7 @@ definitions:
       - hotel_id
       - user_id
     properties:
-      id: 
+      id:
         type: integer
       budget:
         type: integer
@@ -457,7 +473,7 @@ definitions:
         type: string
       user_id:
         type: string
-              
+
   UpdateNewPackage:
     required:
       - id
@@ -467,7 +483,7 @@ definitions:
       - hotel_id
       - user_id
     properties:
-      id: 
+      id:
         type: integer
       budget:
         type: integer
@@ -479,7 +495,7 @@ definitions:
         type: integer
       user_id:
         type: integer
-        
+
   GeneralPackage:
     type: object
     required:
@@ -490,7 +506,7 @@ definitions:
       - hotel_id
       - user_id
     properties:
-      id: 
+      id:
         type: integer
         description: package id
       budget:
@@ -573,17 +589,17 @@ definitions:
       - last_name
       - username
     properties:
-      id: 
+      id:
         type: integer
       password:
         type: string
-      first_name: 
+      first_name:
         type: string
       last_name:
         type: string
       username:
-        type: string 
-        
+        type: string
+
   updateUser:
     type: object
     required:
@@ -592,15 +608,15 @@ definitions:
       - last_name
       - username
     properties:
-      id: 
+      id:
         type: integer
-      first_name: 
+      first_name:
         type: string
       last_name:
         type: string
       username:
-        type: string 
-      
+        type: string
+
   specificUser:
     type: object
     required:
