# cost-manager/api/controllers/flight.js
@@ -1,18 +1,0 @@
-'use strict';
-var util = require('util');
-var knex = require(../../knex.js)
-
-
-function GetAllFlight(){
-  knext('flights').
-}
-
-function GetFlight(){
-
-}
-
-
-module.exports = {
-  GetAllFlight: GetAllFlight
-  GetFlight: GetFlight
-};
