# cost-manager/api/controllers/hotel.js
@@ -1,18 +1,0 @@
-'use strict';
-var util = require('util');
-var knex = require(../../knex.js)
-
-
-function GetAllHotel(){
-
-}
-
-function GetSpecificHotel(){
-
-}
-
-
-module.exports = {
-  GetAllHotel: GetAllHotel
-  GetSpecificRestaurant: GetSpecificRestaurant
-};
