# cost-manager/api/controllers/restaurant.js
@@ -1,18 +1,0 @@
-'use strict';
-var util = require('util');
-var knex = require(../../knex.js)
-
-
-function GetAllRestaurant(){
-
-}
-
-function GetSpecificRestaurant(){
-
-}
-
-
-module.exports = {
-  GetAllRestaurant: GetAllRestaurant
-  GetSpecificRestaurant: GetSpecificRestaurant
-};
